--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             text-transform: uppercase;
         }
     </style>
+    <h3 style="text-align: center">Instagram Feeder Demo</h3>
     <div id="instagramFeed" class="instagram-feed-wrapper"></div>
     <div class="container" id="instagramFeedDesc">
         <div class="d-md-flex">
