update instagram link

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <h2 class="title instagram-text">Tag a photo<a
                     href="https://www.instagram.com/explore/tags/babykids/" target="_blank"
                     rel="noopener">#babykids</a> for a chance to be featured!</h2>
-            <a href="https://www.instagram.com/babykids/"
+            <a href="https://www.instagram.com/mangcoding/"
                 class="Button Button--primary instagram-button" target="_blank"
                 rel="noopener">Follow</a>
         </div>
