--- a/index.html
+++ b/index.html
@@ -6,139 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Instagram Feeder</title>
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <style>
-        .container {
-            max-width:1218px;
-            margin:0 auto;
-        }
-        #instagramFeed {
-            height: calc(100vw / 3 - 180px);
-            min-height: 300px;
-        }
-
-        #instagramFeedDesc {
-            margin-top: 30px;
-            margin-bottom: 20px;
-        }
-
-        #instagramFeedDesc .title a {
-            color: #ee52b2;
-        }
-
-        .Button {
-            padding: 14px 28px;
-            line-height: normal;
-            border: 1px solid transparent;
-            border-radius: 0;
-            text-transform: uppercase;
-            font-size: 16px;
-            text-align: center;
-            color: #FFF;
-            background-color: #000;
-            display: inline-block;
-            margin-bottom: 0.75em;
-            transition: all .3s ease;
-        }
-
-        .Button:hover {
-            background-color: rgba(0, 0, 0, .9);
-            color: #ee52b2;
-        }
-
-        .d-md-flex {
-            text-align: center;
-        }
-
-        @media screen and (min-width:768px) {
-            .d-md-flex {
-                text-align: unset;
-                display: flex;
-                margin-left: 10px;
-                margin-right: 10px;
-                align-items: center;
-                justify-content: space-between;
-            }
-        }
-
-        .carousel-cell {
-            width: calc(100vw / 3 - 180px);
-            min-width: 300px;
-            height: 100%;
-            margin-right: 10px;
-            background: #000;
-            border-radius: 5px;
-            counter-increment: carousel-cell;
-        }
-
-        .Instafeed--item {
-            overflow: hidden;
-            position: relative;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .Instafeed--item .Instafeed--thumbnail {
-            object-fit: cover;
-            object-position: center center;
-            width: 100%;
-            height: 100%;
-        }
-
-        .Instafeed--item:hover .Instafeed--Caption--overlay {
-            visibility: visible;
-            top: 0;
-            z-index: 99;
-        }
-
-        .Instafeed--item .Instafeed--Caption--overlay {
-            width: 100%;
-            height: 100%;
-            padding: 20px;
-            position: absolute;
-            visibility: hidden;
-            top: 100%;
-            z-index: -1;
-            transition: all 0.2s ease-in-out;
-            padding: 20px;
-            box-sizing: border-box;
-            background: rgba(0, 0, 0, .7);
-        }
-
-        .Instafeed--item .Instafeed--Caption--overlay .Instafeed--LikeCount svg {
-            fill: #FFF;
-            margin-right: 8px;
-            width: 17px;
-            height: 15px;
-            vertical-align: sub;
-        }
-
-        .Instafeed--item .Instafeed--Caption--overlay .Instafeed--Caption {
-            position: relative;
-            height: calc(100% - 70px);
-            margin: 20px 0;
-            overflow: hidden;
-            word-break: break-word;
-        }
-
-        .Instafeed--item .Instafeed--Caption--overlay .Instafeed--LikeCount,
-        .Instafeed--item .Instafeed--Caption--overlay .Instafeed--Caption,
-        .Instafeed--item .Instafeed--Caption--overlay time {
-            color: #FFF;
-        }
-
-        .Instafeed--item .Instafeed--Caption--overlay time {
-            position: absolute;
-            bottom: 20px;
-            text-transform: uppercase;
-        }
-    </style>
-    <h3 style="text-align: center">Instagram Feeder Demo</h3>
+    <h2 style="text-align: center">Instagram Feeder Demo</h2>
     <div id="instagramFeed" class="instagram-feed-wrapper"></div>
     <div class="container" id="instagramFeedDesc">
         <div class="d-md-flex">
-            <h2 class="title instagram-text">Tag a photo<a
+            <h2 class="title instagram-text">Tag a photo <a
                     href="https://www.instagram.com/explore/tags/babykids/" target="_blank"
                     rel="noopener">#babykids</a> for a chance to be featured!</h2>
             <a href="https://www.instagram.com/mangcoding/"
@@ -200,14 +75,7 @@
                             pageDots: false,
                             setGallerySize: false,
                             prevNextButtons: true,
-                            arrowShape: {
-                                "x0": 20,
-                                "x1": 60,
-                                "y1": 40,
-                                "x2": 60,
-                                "y2": 35,
-                                "x3": 25
-                            }
+                            arrowShape: { "x0": 20, "x1": 60, "y1": 40, "x2": 60, "y2": 35, "x3": 25 }
                         });
                     }
                 });
