add footer link

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
                 rel="noopener">Follow</a>
         </div>
     </div>
+    <footer>
+        <div class="container">
+            <div class="d-md-flex footer">
+                <span class="copyright">
+                    Made with Love by <a target="_blank" href="http://mangcoding.com">Mangcoding</a>
+                </span>
+                <a class="github-button" href="https://github.com/mangcoding/instagram-feeder" data-size="large"
+                    aria-label="Star mangcoding/instagram-feeder on GitHub">Visit Repository</a>
+            </div>
+        </div>
+    </footer>
     <script id="instagram-template" type="text/x-handlebars-template">
     <a href="{{link}}" class="carousel-cell Instafeed--item" rel="nofollow noopener" target="_blank">
         <img src="{{image_url}}" class="Instafeed--thumbnail" />
@@ -35,6 +46,8 @@
         </div>
     </a>
     </script>
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.2.0/handlebars.min.js"></script>
     <script src="https://www.sowecms.com/demos/jquery.instagramFeed/jquery.instagramFeed.min.js"></script>
